2006-06-01  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/stream.c (stream_server): New priv parameter if we want
					       a reserved port. Don't try to
					       get a reserved port if priv==0.
	* common-src/stream.h (stream_server): New prototype.
	* common-src/bsd-security.c: Call stream_server with priv==0.
	* common-src/krb4-security.c: Call stream_server with priv==1.
	* common-src/security-util.c: Call stream_server with priv==0.
	* restore-src/amidxtaped.c: Call stream_server with priv==0.
	* server-src/chunker.c: Call stream_server with priv==0.
	* server-src/taper.c: Call stream_server with priv==0.

2006-06-01  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/diskfile.c: Return -1 if open of diskfile failed.
	* server-src/driver.c: Change message if didn't get a DATE line.
	* server-src/reporter.c: Ignore faillure in reading amanda.conf
				 disklist and tapelist.

2006-05-29  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda.8.xml: Documents service in .amandahosts.

2006-05-29  Jean-Louis Martineau <martineau@zmanda.com>
	Previous patch doesn't work because 'make -j2' will use fd 3.
	* amandad-src/Makefile.am: Use a temporary file for output of
				   'make listlibsrc'.
	* changer-src/Makefile.am: Ditto.
	* client-src/Makefile.am: Ditto.
	* common-src/Makefile.am: Ditto.
	* oldrecover-src/Makefile.am: Ditto.
	* recover-src/Makefile.am: Ditto.
	* restore-src/Makefile.am: Ditto.
	* server-src/Makefile.am: Ditto.
	* tape-src/Makefile.am: Ditto.

2006-05-29  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/Makefile.am: 'make listlibsrc' send it's ouput to fd 3.
	* changer-src/Makefile.am: Ditto.
	* client-src/Makefile.am: Ditto.
	* common-src/Makefile.am: Ditto.
	* oldrecover-src/Makefile.am: Ditto.
	* recover-src/Makefile.am: Ditto.
	* restore-src/Makefile.am: Ditto.
	* server-src/Makefile.am: Ditto.
	* tape-src/Makefile.am: Ditto.

2006-05-26  Jean-Louis Martineau <martineau@zmanda.com>